# tlsrpt-rr-parser

./: .gitignore  CHANGELOG.md  LICENCE.txt  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yaml
src/tlsrpt_policy/: tlsrpt_parsing.py
tests/: test_tlsrpt_parsing.py
tlsrpt/: tlsrpt_parsing.py
