[tool.poetry]
name = "tlsrpt"
version = "0.0.1"
description = "SMTP TLS Reporting support library for Python"
authors = ["Uwe Kamper <uk@sys4.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyparsing = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
